# astrology-web-app-1

./: .gitignore  PLAN.md  README.md  ROADMAP.md
.claude/agents/: executor.md  planner.md
.github/workflows/: ci.yml
apps/frontend/: .env.example  instrumentation-client.ts  instrumentation.ts  middleware.ts  next.config.ts  package-lock.json  package.json  proxy.ts
docs/: DEPLOY.md  LAUNCH.md
docs/plans/: 2026-07-15-stage-a-stabilization.md  2026-07-15-stage-b-infrastructure.md  2026-07-16-stage-c-product-readiness.md  2026-07-16-stage-d-launch.md  2026-07-18-monopay-migration.md  2026-07-19-c2-i18n-ua-en.md  2026-07-19-c3-security-review.md  2026-07-19-deploy-contabo-vercel.md  (+1 more)
infra/: .env.example  Caddyfile  docker-compose.yml
scripts/: backup_db.sh  fetch_chiron_spk.py  import_geonames.py
services/astro-api/: .env.example  Dockerfile  README.md  alembic.ini  docker-entrypoint.sh  pyproject.toml
services/astro-api/alembic/: env.py
services/astro-api/alembic/versions/: 5a88b1e15a4b_pg_trgm_city_search.py  955ec162720e_initial_schema.py  97e5ec4091bb_email_verification_and_reset_tokens.py  ad058419ca40_stripe_customer_id_payments.py  bd01facb7481_monopay_invoice_id.py  ee0a96658a6f_saved_charts.py
services/astro-api/app/: config.py  email.py  main.py  monopay.py  rate_limit.py
services/astro-api/app/data/: arabic_parts.json  aspects_natal.json  terms.json
services/astro-api/app/dependencies/: auth.py  billing.py
services/astro-api/app/ephemeris/: __init__.py  arabic_parts.py  engine.py  houses.py  terms.py
services/astro-api/app/models/: __init__.py  chart.py  chart_log.py  city.py  person.py  user.py
services/astro-api/app/routers/: atlas.py  auth.py  billing.py  charts.py  persons.py  saved_charts.py  settings.py  users.py
services/astro-api/app/schemas/: atlas.py  auth.py  chart.py  person.py  saved_chart.py  settings.py
services/astro-api/tests/: conftest.py  test_account_deletion.py  test_atlas.py  test_auth.py  test_billing.py  test_cross_swisseph.py  test_email_flow.py  test_ephemeris.py  test_ephemeris_range_validation.py  test_plan_gates.py  test_postgres_integration.py  test_saved_charts.py
(+61 files in other folders)
