[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "astro-api"
version = "0.2.0"
description = "ZET Geo Astro API — FastAPI backend with auth and ephemeris engine"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115,<1.0",
  "pydantic[email]>=2.11,<3.0",
  "pydantic-settings>=2.7,<3.0",
  "uvicorn[standard]>=0.35,<1.0",
  "sqlalchemy>=2.0,<3.0",
  "alembic>=1.14,<2.0",
  "python-jose[cryptography]>=3.3,<4.0",
  "bcrypt>=4.0,<5.0",
  "python-multipart>=0.0.20,<1.0",
  "aiosqlite>=0.20,<1.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28,<1.0",
  "pytest>=8.3,<9.0",
  "pytest-asyncio>=0.25,<1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
