[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "astro-api"
version = "0.2.0"
description = "Zorya Astro API — FastAPI backend with auth and ephemeris engine"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115,<1.0",
  "pydantic[email]>=2.11,<3.0",
  "pydantic-settings>=2.7,<3.0",
  "uvicorn[standard]>=0.35,<1.0",
  "sqlalchemy[asyncio]>=2.0,<3.0",
  "alembic>=1.14,<2.0",
  "pyjwt>=2.8,<3.0",
  "bcrypt>=4.0,<5.0",
  "python-multipart>=0.0.20,<1.0",
  "aiosqlite>=0.20,<1.0",
  "skyfield>=1.49,<2.0",
  "stripe>=10.0,<16.0",
  "slowapi>=0.1.9,<1.0",
  "asyncpg>=0.29,<1.0",
  "sentry-sdk[fastapi]>=2.0,<3.0",
  "httpx>=0.28,<1.0",
  "cryptography>=48.0.1,<49",
]

[project.optional-dependencies]
dev = [
  "pytest>=9.0.3,<10.0",
  "pytest-asyncio>=1.4.0,<2.0",
  # Swiss Ephemeris is AGPL — dev/CI cross-validation oracle ONLY,
  # must never be imported by runtime code (app/*)
  "pyswisseph>=2.10,<3.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
